# docs/swagger.json
@@ -208,6 +208,75 @@
                 }
             }
         },
+        "/api/v3/kmb/encrypt-decrypt": {
+            "post": {
+                "description": "Encrypt Decrypt",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tools"
+                ],
+                "parameters": [
+                    {
+                        "description": "Body payload",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.RequestEncryption"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.ApiResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "additionalProperties": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.ApiResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/response.ErrorValidation"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v3/kmb/filtering": {
             "post": {
                 "description": "KmbFiltering",
@@ -240,11 +309,65 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/response.DupcheckResult"
+                                            "$ref": "#/definitions/response.Filtering"
                                         }
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.ApiResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/response.ErrorValidation"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v3/kmb/produce/filtering": {
+            "post": {
+                "description": "Produce Filtering via REST API",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tools"
+                ],
+                "parameters": [
+                    {
+                        "description": "Body payload",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.Filtering"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
                         }
                     },
                     "400": {
@@ -342,6 +465,29 @@
         }
     },
     "definitions": {
+        "http.RequestEncryption": {
+            "type": "object",
+            "properties": {
+                "decrypt": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "6gs+t7lBQTYM5SPuqJTNonWLjvmmmc9FaWIj"
+                    ]
+                },
+                "encrypt": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "hello world"
+                    ]
+                }
+            }
+        },
         "request.BodyRequestElaborate": {
             "type": "object",
             "required": [
@@ -653,22 +799,22 @@
                 },
                 "id_number": {
                     "type": "string",
-                    "example": "1234XXXXXXXX0001"
+                    "example": "ENCRYPTED NIK"
                 },
                 "legal_name": {
                     "type": "string",
-                    "example": "LEGAL NAME"
+                    "example": "ENCRYPTED LEGAL NAME"
                 },
                 "prospect_id": {
                     "type": "string",
-                    "example": "TEST-DEV"
+                    "example": "SAL042600001"
                 },
                 "spouse": {
                     "$ref": "#/definitions/request.FilteringSpouse"
                 },
                 "surgate_mother_name": {
                     "type": "string",
-                    "example": "SURGATE MOTHER NAME"
+                    "example": "ENCRYPTED SURGATE MOTHER NAME"
                 }
             }
         },
@@ -707,15 +853,15 @@
                 },
                 "spouse_id_number": {
                     "type": "string",
-                    "example": "1234XXXXXXXX0001"
+                    "example": "ENCRYPTED NIK"
                 },
                 "spouse_legal_name": {
                     "type": "string",
-                    "example": "LEGAL NAME"
+                    "example": "ENCRYPTED LEGAL NAME"
                 },
                 "spouse_surgate_mother_name": {
                     "type": "string",
-                    "example": "SURGATE MOTHER NAME"
+                    "example": "ENCRYPTED SURGATE MOTHER NAME"
                 }
             }
         },
@@ -821,6 +967,15 @@
         "response.ElaborateResult": {
             "type": "object",
             "properties": {
+                "age_vehicle": {
+                    "type": "string"
+                },
+                "bpkb_name_type": {
+                    "type": "integer"
+                },
+                "cluster": {
+                    "type": "string"
+                },
                 "code": {
                     "type": "integer"
                 },
@@ -830,8 +985,17 @@
                 "ltv": {
                     "type": "integer"
                 },
+                "ltv_origin": {
+                    "type": "number"
+                },
                 "reason": {
                     "type": "string"
+                },
+                "result_pefindo": {
+                    "type": "string"
+                },
+                "total_balki_debet": {
+                    "type": "number"
                 }
             }
         },
@@ -843,6 +1007,44 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "response.Filtering": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "object"
+                },
+                "customer_segment": {
+                    "type": "object"
+                },
+                "customer_status": {
+                    "type": "object"
+                },
+                "decision": {
+                    "type": "string"
+                },
+                "is_blacklist": {
+                    "type": "boolean"
+                },
+                "next_process": {
+                    "type": "boolean"
+                },
+                "pbk_report_customer": {
+                    "type": "object"
+                },
+                "pbk_report_spouse": {
+                    "type": "object"
+                },
+                "prospect_id": {
+                    "type": "string"
+                },
+                "reason": {
+                    "type": "string"
+                },
+                "total_baki_debet": {
+                    "type": "object"
                 }
             }
         },
