# domain/tools/delivery/http/rest.go
@@ -14,6 +14,11 @@ type handlerTools struct {
 	Json common.JSON
 }
 
+type RequestEncryption struct {
+	Encrypt []string `json:"encrypt" example:"hello world"`
+	Decrypt []string `json:"decrypt" example:"6gs+t7lBQTYM5SPuqJTNonWLjvmmmc9FaWIj"`
+}
+
 func ToolsHandler(kmbroute *echo.Group, json common.JSON, middlewares *middlewares.AccessMiddleware) {
 	handler := handlerTools{
 		Json: json,
@@ -21,11 +26,16 @@ func ToolsHandler(kmbroute *echo.Group, json common.JSON, middlewares *middlewar
 	kmbroute.POST("/encrypt-decrypt", handler.EncryptDecrypt, middlewares.AccessMiddleware())
 }
 
+// Encrypt Decrypt Tools godoc
+// @Description Encrypt Decrypt
+// @Tags Tools
+// @Produce json
+// @Param body body RequestEncryption true "Body payload"
+// @Success 200 {object} response.ApiResponse{data=map[string]string}
+// @Failure 400 {object} response.ApiResponse{error=response.ErrorValidation}
+// @Failure 500 {object} response.ApiResponse{}
+// @Router /api/v3/kmb/encrypt-decrypt [post]
 func (c *handlerTools) EncryptDecrypt(ctx echo.Context) (err error) {
-	type RequestEncryption struct {
-		Encrypt []string `json:"encrypt"`
-		Decrypt []string `json:"decrypt"`
-	}
 	var req RequestEncryption
 	if err := ctx.Bind(&req); err != nil {
 		return c.Json.InternalServerErrorCustomV2(ctx, middlewares.UserInfoData.AccessToken, constant.NEW_KMB_LOG, "LOS - Encrypt-Decrypt", err)
